RESOLVED FIXED268887
[Catalyst] AX server not started in the WebContent process
https://bugs.webkit.org/show_bug.cgi?id=268887
Summary [Catalyst] AX server not started in the WebContent process
Per Arne Vollan
Reported 2024-02-06 20:16:22 PST
AX server not started in the WebContent process on Catalyst.
Attachments
Per Arne Vollan
Comment 1 2024-02-06 20:16:26 PST
Per Arne Vollan
Comment 2 2024-02-06 20:19:31 PST
EWS
Comment 3 2024-02-07 07:19:17 PST
Committed 274214@main (6e9bfa7a9bb1): <https://commits.webkit.org/274214@main> Reviewed commits have been landed. Closing PR #23978 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.