[Catalyst] AX server not started in the WebContent process https://bugs.webkit.org/show_bug.cgi?id=268887 rdar://122118903

Reviewed by Chris Dumez.

The code to eagerly start the AX server in the WebContent process was only enabled for iOS. We should also enable it on Catalyst.

* Source/WebKit/WebProcess/cocoa/WebProcessCocoa.mm:
(WebKit::webProcessAccessibilityBundlePath):
(WebKit::registerWithAccessibility):

Canonical link: https://commits.webkit.org/274214@main